<resources>
    <string name="app_name">EdgeMedical</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="you_can_also_register_with">You can also register with:</string>
    <string name="pass_recovery">Pass Recovery</string>
    <string name="recovery_mail">Recovery E-Mail</string>
    <string name="enter_an_email_to_which_we_can_send_information_to_recover_your_password">Enter an email to which we can send information to recover your password</string>
    <string name="send">Send</string>
    <string name="change_password">Change Password</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="continuar">Continue</string>
    <string name="enter_the_password_recovery_code_that_we_have_sent_to_your_email">Enter the password recovery code that we have sent to your email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="i_accept_the_terms_and_conditions_to_use_of_edgemedical">I accept the terms and conditions to use EdgeMedical</string>
    <string name="create_account">Create Account</string>
    <string name="terms_and_condition">Read Terms And Conditions</string>
    <string name="title_activity_main">EdgeMedical</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_history">Appointments History</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_logout">Logout</string>
    <string name="edge_medical">Edge Medical</string>
    <string name="this_is_a_profile_activity">This is a Profile Activity</string>
    <string name="history">Appointments History</string>
    <string name="contact_us">Contact US</string>


    <string name="tab_text_1">Completed</string>
    <string name="tab_text_2">Pending</string>
    <string name="sign_up">Sign up</string>
    <string name="end_call">End Call</string>
    <string name="camera">camera</string>
    <string name="microphone">Microphone</string>

    <string-array name="countries">
        <item>United States</item>
        <item>Canada</item>
    </string-array>

    <string name="facebook_app_id">199502644781325</string>
    <string name="fb_login_protocol_scheme">fb199502644781325</string>

</resources>
