<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/header_register"
        android:theme="@style/ToolbarTheme"
        android:elevation="5dp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:elevation="10dp"
        android:transitionName="tvLogin"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-80dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/circletransparant1" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-80dp"
        android:layout_marginBottom="-30dp"
        android:src="@drawable/circle1" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="80dp"
        app:srcCompat="@drawable/icon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bgHeader"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">
        <RelativeLayout
            android:id="@+id/rlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">

                    <CheckBox
                        android:id="@+id/cbTerms"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/i_accept_the_terms_and_conditions_to_use_of_edgemedical" />

                    <TextView
                        android:id="@+id/tvTerms"
                        android:layout_marginTop="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorOrange"
                        android:textStyle="bold"
                        android:text="@string/terms_and_condition"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_alignLeft="@+id/cv"
                android:layout_alignRight="@+id/cv"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="-30dp"
                android:layout_marginRight="35dp"
                android:elevation="10dp">

                <Button
                    android:id="@+id/btCreate"
                    android:layout_marginTop="250sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ui_gray"
                    android:enabled="false"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>