<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CallActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/subscriber_container" >


        </FrameLayout>

        <FrameLayout
            android:id="@+id/publisher_container"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="150dp"
            android:background="#FFFFFF"
            android:padding="2dp"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ImageButton
            android:id="@+id/call"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="bottom|center"
            android:background="@mipmap/phone"
            android:contentDescription="@string/end_call"
            android:scaleType="centerInside"
            android:src="@mipmap/phone"
            tools:srcCompat="@mipmap/phone" />

        <ImageButton
            android:id="@+id/noCam"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom|start"
            android:background="@mipmap/hide"
            android:contentDescription="@string/camera"
            android:scaleType="centerInside"
            android:src="@mipmap/hide"
            android:visibility="gone"
            tools:srcCompat="@mipmap/hide" />

        <ImageButton
            android:id="@+id/cam"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom|start"
            android:background="@mipmap/eye"
            android:contentDescription="@string/camera"
            android:scaleType="centerInside"
            android:src="@mipmap/eye"
            tools:srcCompat="@mipmap/eye" />

        <ImageButton
            android:id="@+id/noMic"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@mipmap/mic"
            android:contentDescription="@string/microphone"
            android:scaleType="centerInside"
            android:visibility="gone"
            tools:srcCompat="@mipmap/mic" />

        <ImageButton
            android:id="@+id/mic"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom|end"
            android:background="@mipmap/microphone"
            android:contentDescription="@string/microphone"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/microphone"
            tools:srcCompat="@mipmap/microphone" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>