<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    tools:ignore="VectorDrawableCompat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/header_login"
        android:elevation="5dp" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:elevation="5dp"
        android:text="Welcome to Edge Medical"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDesc"
        android:transitionName="tvLogin"
        android:layout_alignLeft="@+id/tvDesc"
        android:elevation="5dp"
        android:text="Login"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-100dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/circletransparant" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-80dp"
        android:layout_marginBottom="-30dp"
        android:src="@drawable/circle" />

    <ImageView
        android:id="@+id/circle4"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-50dp"
        android:layout_marginBottom="-50dp"
        android:layout_toLeftOf="@+id/circle3"
        android:src="@drawable/circletransparant" />

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_marginTop="115dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/icon" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bgHeader"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">

                    <EditText
                        android:id="@+id/txtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_alignLeft="@+id/cv"
                android:layout_alignRight="@+id/cv"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="20dp"
                android:elevation="10dp">

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:background="@drawable/bg_ui"
                    android:text="Login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ui"
                    android:layout_below="@+id/btLogin"
                    android:layout_marginTop="8dp"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/cv"
                android:layout_alignRight="@+id/cv"
                android:layout_marginTop="-20dp"
                android:layout_marginRight="-20dp"
                android:elevation="10dp">


            </RelativeLayout>

            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                android:text="@string/forgot_your_password"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvForgot"
                android:layout_alignLeft="@+id/cv"
                android:layout_alignRight="@+id/cv"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bt_uifb"
                android:drawableLeft="@drawable/logofacebook"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="LOGIN WITH FACEBOOK"
                android:textColor="@color/colorBlue" />






        </RelativeLayout>
    </ScrollView>

</RelativeLayout>