<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/header_register"
        android:theme="@style/ToolbarTheme"
        android:elevation="5dp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:elevation="10dp"
        android:transitionName="tvLogin"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-80dp"
        android:layout_marginBottom="350dp"
        android:src="@drawable/circletransparant1" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-80dp"
        android:layout_marginBottom="-30dp"
        android:src="@drawable/circle1" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="80dp"
        app:srcCompat="@drawable/icon" />


        <RelativeLayout
            android:id="@+id/rlayout"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bgHeader">

            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">

                    <EditText
                        android:id="@+id/txtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:inputType="text"
                        android:hint="@string/username"/>

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="15dp"
                        android:inputType="text"
                        android:hint="Name"
                        android:layout_below="@+id/txtUsername"/>

                    <EditText
                        android:id="@+id/txtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="15dp"
                        android:inputType="text"
                        android:layout_below="@+id/txtName"
                        android:hint="Last Name"/>

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="15dp"
                        android:inputType="textEmailAddress"
                        android:layout_below="@+id/txtLastName"
                        android:hint="@string/email"/>


                    <Spinner
                        android:id="@+id/spnCountry"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:spinnerMode="dropdown"
                        android:layout_below="@+id/txtEmail"
                        android:overlapAnchor="false"
                        />

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="15dp"
                        android:layout_below="@+id/spnCountry"
                        android:hint="Password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/txtConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="15dp"
                        android:layout_below="@+id/txtPassword"
                        android:hint=" Confirm Password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/txtPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="15dp"
                        android:inputType="number|phone"
                        android:layout_below="@+id/txtConfirmPassword"
                        android:hint="Phone Number"/>

                    <EditText
                        android:id="@+id/txtBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtPhoneNumber"
                        android:layout_marginStart="10dp"
                        android:enabled="false"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="15dp"
                        android:layout_toStartOf="@+id/btnBirth"
                        android:hint="BirthDate" />

                    <ImageButton
                        android:id="@+id/btnBirth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_date"
                        android:layout_below="@+id/txtPhoneNumber"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_date" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            </ScrollView>

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scroll"
                android:layout_alignLeft="@+id/scroll"
                android:layout_alignRight="@+id/scroll"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="-30dp"
                android:layout_marginRight="35dp"
                android:elevation="10dp">

                <Button
                    android:id="@+id/btSignUp"
                    android:layout_marginTop="45sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ui1"
                    android:text="Sign up"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>
            <TextView
                android:id="@+id/tvFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:elevation="5dp"
                android:text="@string/you_can_also_register_with"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFacebook"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_uifb1"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:drawableLeft="@drawable/logofacebook"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="FACEBOOK"
                android:textColor="@color/colorOrange" />
        </RelativeLayout>

</RelativeLayout>